// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> should render 1`] = `
<div
  aria-label="Select Value"
  aria-valuemax="100"
  aria-valuemin="0"
  className="mdc-slider"
  role="slider"
  tabIndex="0"
>
  <div
    className="mdc-slider__track-container"
  >
    <div
      className="mdc-slider__track"
    />
  </div>
  <div
    className="mdc-slider__thumb-container"
  >
    <svg
      className="mdc-slider__thumb"
      height="21"
      width="21"
    >
      <circle
        cx="10.5"
        cy="10.5"
        r="7.875"
      />
    </svg>
    <div
      className="mdc-slider__focus-ring"
    />
  </div>
</div>
`;

exports[`<Slider /> shound render disabled 1`] = `
<div
  aria-disabled={true}
  aria-label="Select Value"
  aria-valuemax="100"
  aria-valuemin="0"
  className="mdc-slider"
  role="slider"
  tabIndex="0"
>
  <div
    className="mdc-slider__track-container"
  >
    <div
      className="mdc-slider__track"
    />
  </div>
  <div
    className="mdc-slider__thumb-container"
  >
    <svg
      className="mdc-slider__thumb"
      height="21"
      width="21"
    >
      <circle
        cx="10.5"
        cy="10.5"
        r="7.875"
      />
    </svg>
    <div
      className="mdc-slider__focus-ring"
    />
  </div>
</div>
`;

exports[`<Slider /> shound render with initialValue 1`] = `
<div
  aria-label="Select Value"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={50}
  className="mdc-slider"
  role="slider"
  tabIndex="0"
>
  <div
    className="mdc-slider__track-container"
  >
    <div
      className="mdc-slider__track"
    />
  </div>
  <div
    className="mdc-slider__thumb-container"
  >
    <svg
      className="mdc-slider__thumb"
      height="21"
      width="21"
    >
      <circle
        cx="10.5"
        cy="10.5"
        r="7.875"
      />
    </svg>
    <div
      className="mdc-slider__focus-ring"
    />
  </div>
</div>
`;
